@@ -1,3 +1,7 @@
+2012-12-22  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* socialaccount: Added support for Stack Exchange.
+
 2012-12-14  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* socialaccount: Added `get_social_accounts` template tag.
